--- a/styles.css
+++ b/styles.css
@@ -54,5 +54,258 @@ padding:0;
 background-color:#F7F6F6;
 } 
 .timeSheetForm{
+    position:absolute;
+    z-index:5;
     display:none;
+    margin-left:0px;
+    transition:2s;
+}
+.weekDays{
+    display:inline-block;
+    border:solid thin;
+    border-color:lightgrey;
+    background-color:#F7FFEF;
+}
+#errorText{
+    color:red;
+}
+.viewTimeTable {
+    border-collapse:collapse;
+        text-align:center;
+        width:100%;
+        font-family: 'Source Sans Pro', sans-serif;
+}
+
+
+tr.editClass:nth-child(odd){
+    padding: 10px 10px 10px 5px;
+    border-collapse:collapse;
+    background-color:#EBFFD6;
+    border-bottom:thin solid;
+    border-color:#F0F0F0;
+
+}
+td.editClass{
+        border-right:thin solid;
+        border-color:#F0F0F0;
+}
+tr.editClass:nth-child(even){
+    padding: 10px 10px 10px 5px;
+    border-collapse:collapse;
+    background-color:#F7FFEF;
+         border-bottom:thin solid;
+        border-color:#F0F0F0
+
+}
+td{
+font-family: 'Droid Sans', sans-serif;
+}
+     
+      th.editClass {
+font-family: 'Cabin', sans-serif;
+    background-color: white;
+        border-collapse: collapse;
+        border-bottom:thin solid;
+        border-color:lightgrey;
+            padding: 10px 10px 0px 5px;
+}
+h1{
+    font-family: 'Montserrat', sans-serif;
+}
+.timesheetOrganizer{
+  background-color:white;
+  border-radius:11px;
+width:500px;
+  box-shadow:5px 2px 20px lightgrey;
+  
+}
+.addSubmit{
+    border:none;
+    background-color:#92D36E;
+    width:80px;
+    height:20px;
+text-align: center;
+transition:0.5s;
+}
+.addSubmit:hover{
+    background-color:green;
+    color:white;
+    cursor:pointer;
+}
+.addStudentButton{
+         border:none;
+         margin-left:-40px;
+    background-color:#EF9C2A;
+    width:100px;
+    height:50px;
+    display:inline-block;
+text-align: center;
+color:#FFFAF0;
+position:absolute;
+z-index:1;
+transition:0.5s;
+    
+}
+.openSheet{
+     border:none;
+    background-color:#EF9C2A;
+    width:100px;
+    height:50px;
+    display:inline-block;
+text-align: center;
+  margin-left:70px;
+position:absolute;
+color:#FFF5E0;
+z-index:2;
+transition:0.5s;
+}
+.editSheet{
+      border:none;
+    background-color:#EF9C2A;
+    width:100px;
+    height:50px;
+    display:inline-block;
+text-align: center;
+color:#FFF5E0;
+position:absolute;
+z-index:3;   
+margin-left:-150px;
+transition:0.5s;
+}
+.openSheet:hover,.editSheet:hover,.addStudentButton:hover{
+background-color:#E85E01;
+border-radius:10px;
+cursor:pointer;
+    
+}
+.timeSheetBox{
+    background-color:#46A0DD;
+    text-align:center;
+    width: 500px;
+    height:250px;
+    border-radius:2px;
+  display: block;
+  margin-top:150px;
+  margin-left: auto;
+  margin-right: auto;
+    padding-top:10px;
+   background: -webkit-linear-gradient(#4DD7FA, #33CCFF); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(#4DD7FA, #33CCFF); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(#4DD7FA, #33CCFF); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(#4DD7FA, #33CCFF); /* Standard syntax */
+
+}
+.escape{
+    width:20px;
+    height: auto;
+position:absolute;
+z-index:6;
+margin-left:30px;
+}
+.escape:hover{
+    cursor:pointer;
+}
+#lastCorrecter,#firstCorrecter,#sidCorrector,#genderCorrecter,#sectionCorrecter,#lastFourCorrecter,#sidCorrecter{
+    color:red;
+    display:inline-block;
+    opacity:0.0;
+    
+}
+.submitArea{
+    display:none;
+    margin-left:190px;
+    margin-top:170px;
+}
+.mainIcon{
+    width:100px;
+    height:auto;
+}
+.successCheck{
+    font-size:30px;
+    text-align:center;
+}
+#avatarHolder{
+    display:inline-block;
+}
+#info{
+    margin-left:140px;
+    background-color:#dbffff;
+    margin-top:-80;
+    border-top-left-radius:2px;
+ border-bottom-left-radius:2px;
+font-family: 'Source Sans Pro', sans-serif;
+padding:5px 10px 10px 2px;
+
+}
+.newProfile{
+ background-color:#4CD7FA; 
+ width:275px;
+ height:150px;
+ margin: 0 auto;
+ margin-top:40px;
+ border-top-left-radius:10px;
+ border-bottom-right-radius:10px;
+}
+.noDecoration{
+    text-decoration:none;    
+}
+
+.submitHours{
+    margin-left:40px;
+    border:none;
+    background-color:#FFA72E;
+    color:white;
+    width:150px;
+    height:40px;
+    transition:0.5s;
+    
+}
+.submitHours:hover{
+    cursor:pointer;
+    border-radius:10px;
+    background-color:#EF9C2A;
+}
+
+.previewHours tr:nth-child(odd){
+    padding: 10px 10px 10px 5px;
+    border-collapse:collapse;
+    background-color:#EBFFD6;
+    border-bottom:thin solid;
+    border-color:#F0F0F0;
+
+}
+.previewHours{
+    border:thin solid;
+    border-color:grey;
+      border-collapse:collapse;
+}
+.previewHours tr:nth-child(even){
+    padding: 10px 10px 10px 5px;
+    border-collapse:collapse;
+    background-color:#F7FFEF;
+         border-bottom:thin solid;
+        border-color:#F0F0F0
+
+}
+
+.previewHours td:nth-child(odd){
+    font-weight:normal;
+    text-align:right;
+}
+.reload:hover{
+cursor:pointer;
+}
+#profileHolder{
+    margin-top:40px;
+    margin-left:20px;
+    border: dotted;
+    border-width: 2px;
+    border-color:lightgrey;
+    width:22%;
+    height:150px;
+    display:inline-block;
+
+}
+#info2{
+color:grey;
 }
