--- a/styles.css
+++ b/styles.css
@@ -103,7 +103,7 @@ font-family: 'Droid Sans', sans-serif;
      
       th.editClass {
 font-family: 'Cabin', sans-serif;
-    background-color: white;
+    background-color: #EBFFEB;
         border-collapse: collapse;
         border-bottom:thin solid;
         border-color:lightgrey;
@@ -111,6 +111,7 @@ font-family: 'Cabin', sans-serif;
 }
 h1{
     font-family: 'Montserrat', sans-serif;
+    padding-left:25px;
 }
 .timesheetOrganizer{
   background-color:white;
@@ -308,4 +309,23 @@ cursor:pointer;
 }
 #info2{
 color:grey;
+}
+.download{
+    border:none;
+    background-color:#EF9C2A;
+    width:150px;
+    height:50px;
+    display:inline-block;
+text-align: center;
+color:#FFFAF0;
+transition:0.5s;
+   margin-left: 50%;
+   margin-top:20px;
+}
+
+.download:hover{
+    background-color:#E85E01;
+border-radius:10px;
+    cursor:pointer;
+
 }
