Added pdfs to documentation and grammar

--- a/styles.css
+++ b/styles.css
@@ -647,7 +647,7 @@ opacity:0;
 transition:2s;}
 .prevCon{
 width:280px;
-height:auto;
+height:400px;
 box-shadow:10px 20px 60px lightgrey;}
 .iconClass{
 padding-top:50px;
